Implemented matroska DEMUX_GET_FPS (close #2014)